# LearnOpenGL

./: .gitignore  CMakeLists.txt
include/glad/: glad.h
resources/shaders/: default.frag  default.vert  sky.frag  sky.vert
src/: Shader.h  glad.c  main.cpp
